[workspace]
resolver = "3"
members = ["libf4se", "libmimalloc", "libpsycho", "psycho-fo4", "drifter", "libnvse"]

[workspace.dependencies]
anyhow = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "7.0.0-rc2", features = ["inline-more"] }
fern = "0.7.1"
libc = { version = "0.2.178", features = ["extra_traits"] }
log = "0.4"
parking_lot = "0.12.5"
thiserror = "2.0.17"
windows = { version = "=0.60", features = [ 
  "Data_Xml_Dom", 
  "UI_WindowManagement", 
  "Wdk_System_SystemServices", 
  "Win32_Security", 
  "Win32_System_Threading", 
  "Win32_UI_WindowsAndMessaging", 
  "Win32_Graphics_Direct3D11", 
  "Win32_System_LibraryLoader",
  "Win32_System_Performance",
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_System_Console",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_SystemInformation",
  "Win32_System_WindowsProgramming",
  "Win32_System_ProcessStatus",
  "Win32_Graphics_Direct3D",
  "Win32_System_Com",
  "Win32_Graphics_Gdi",
  "Win32_System_Kernel",
] }
