[package]
name = "drifter"
version = "0.1.0"
edition = "2024"
description = "Simple test application for libpsycho hooks"

[[bin]]
name = "drifter"
path = "src/main.rs"

[dependencies]
libpsycho = { path = "../libpsycho" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fern = { workspace = true }
log = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
anyhow = { workspace = true }
libc = { workspace   = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[profile.release]
opt-level = 3
lto = true
strip = true