[package]
name = "libpsycho"
version = "0.1.0"
edition = "2024"

[dependencies]
iced-x86 = { version = "1.21.0", features = ["code_asm", "encoder", "intel"] }
bitflags = "2.9.2"
goblin = "0.10.1"
libc = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }


[profile.release]
opt-level = 3
lto = true
strip = true