[package]
name = "omv"
version = "0.1.0"
edition = "2024"

[lib]
name = "omv"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
libpsycho = { path = "../libpsycho" }
libnvse = { path = "../libnvse" }
log = { workspace = true }
parking_lot = { workspace = true }
psycho-imgui = { path = "../psycho-imgui" }
serde = { workspace = true }
toml = { workspace = true }
toml_edit = "0.22"
windows = { workspace = true }
