[package]
name = "psycho-engine-fixes-helper"
version = "0.1.0"
edition = "2024"

[lib]
name = "psycho_engine_fixes_helper"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
libnvse = { path = "../libnvse" }
libpsycho = { path = "../libpsycho" }
log = { workspace = true }
