[package]
name = "psycho-engine-fixes"
version = "0.1.0"
edition = "2024"


[lib]
name = "psycho_engine_fixes"
crate-type = ["cdylib", "rlib"]

[dependencies]
libmimalloc = { path = "../libmimalloc" }
psycho-loader-api = { path = "../psycho-loader-api" }
libpsycho = { path = "../libpsycho" }
windows = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
ahash = { workspace = true }
rustc-hash = { workspace = true }
rand = { workspace = true }
crossfire = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
shadow-rs = { version = "1.7", default-features = false }
iced-x86 = { version = "1.21.0", features = ["decoder", "fast_fmt"] }

[build-dependencies]
shadow-rs = "1.7"
