[package]
name = "psycho-fo4"
version = "0.1.0"
edition = "2024"

[lib]
name = "psycho"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release] 
panic = "abort"
lto = true


[dependencies]
dashmap = { workspace = true }
parking_lot = { workspace = true }
humantime = "2.2"
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
fern = { workspace = true }
libc = { workspace = true }
libf4se = { path = "../libf4se" }
libpsycho = { path = "../libpsycho" }
libmimalloc = { path = "../libmimalloc" }
