[package]
name = "psycho-nvse"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
windows = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
libmimalloc = { path = "../libmimalloc" }
libnvse = { path = "../libnvse" }
libpsycho = { path = "../libpsycho" }
libz-rs-sys = { version = "0.5.5", features = ["rust-allocator"] }
bump-scope = "1.5.1"
ahash = { workspace = true }