[package]
name = "psycho-nvse"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
libmimalloc = { path = "../libmimalloc", features = ["encoded_freelist"] }
libnvse = { path = "../libnvse" }
libpsycho = { path = "../libpsycho" }
windows = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
libz-rs-sys = { version = "0.5.5", features = ["rust-allocator"] }
ahash = { workspace = true }
rustc-hash = { workspace = true }
scc = { workspace = true }
crossfire = "3.1.1"
rand = { workspace = true }
clashmap = { workspace = true }
orx-concurrent-vec = { workspace = true }
serde = { workspace = true }