[package]
name = "psycho-nvse"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
libmimalloc = { path = "../libmimalloc", features = ["encoded_freelist"] }
libnvse = { path = "../libnvse" }
libpsycho = { path = "../libpsycho" }
windows = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
ahash = { workspace = true }
rustc-hash = { workspace = true }
scc = { workspace = true }
crossfire = "3.1.1"
rand = { workspace = true }
clashmap = { workspace = true }
orx-concurrent-vec = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
shadow-rs = { version = "1.7", default-features = false }
iced-x86 = { version = "1.21.0", features = ["decoder", "fast_fmt"] }

[build-dependencies]
shadow-rs = "1.7"